[fix] Replace webkit-line-clamp with max-height for description truncation

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -212,14 +212,11 @@ h1 {
   line-height: 1.5;
   margin-bottom: 0.5rem;
   overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
+  max-height: 4.5em;
 }
 
 .description.expanded {
-  display: block;
-  -webkit-line-clamp: unset;
+  max-height: none;
 }
 
 .description-toggle {
